# CogniPrint

./: .env.billing.example  .env.example  .gitignore  .zenodo.json  CITATION.cff  Dockerfile.railway  LICENSE  Makefile  PROGRESS.md  README.md  ROADMAP.md  TODO.md  project_brief.md  pyproject.toml  railway.json  test_cogniprint.db
docs/: RAILWAY_CLI.md  RAILWAY_RECOVERY.md  STRIPE_LAUNCH.md  VERCEL_LAUNCH.md  arxiv-submission-plan.md  arxiv-submission-playbook.md  attribution-and-provenance.md  benchmark-decision-memo-v1.1.md  benchmark-expansion-plan.md  benchmark-protocol.md  benchmark-shift-note-v1.1.md  benchmark-validation-interpretation-v1.1.md  campaign-template-system.md  citation-core.md  claims-matrix.md  claims-review-questionnaire.md  colleague-communication-pack.md  colleague-review-checklist.md  commercial-layer-positioning.md  connector-safe-execution-checklist.md  content-scanner-enterprise-rollout.md  content-scanner-live-production-runbook.md  current-state-summary.md  data-sourcing-policy.md  decision-gate-tracker.md  due-diligence-response.md  empirical-evidence-summary-v1.md  empirical-stability-paper-plan.md  evidence-package-index.md  evidence-visibility-checks.json  evidence-visibility-dashboard.md  evidence-visibility-layer.md  external-review-dispatch.md  feedback-synthesis-latest.md  first-public-release-checklist.md  github-issues-backlog.md  google-scholar-setup.md  interpretation-memo-template.md  local-validation-workstation.md  manuscript-benchmark-validation-synthesis-v1.1.md  (+29 more)
paper/: README.md  arxiv-abstract.txt  main.tex  (+3 more)
(+180 files in other folders)
